--- a/src/components/search-box/search-box.styles.css
+++ b/src/components/search-box/search-box.styles.css
@@ -7,6 +7,7 @@
   width: 150px;
   line-height: 30px;
   margin-bottom: 30px;
+  font-family: 'Merienda';
 }
 
 .label {
@@ -15,4 +16,5 @@
   font-weight: bold;
   margin-right: 10px;
   text-align: left;
+  font-family: 'Merienda';
 }
